feature: add jobless club

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,9 @@
   "display": "theme/sleek",
   "compilerOptions": {
     "types": ["astro/client"],
-    "baseUrl": "."
+    "baseUrl": ".",
+    "verbatimModuleSyntax": true,
+    "importsNotUsedAsValues": "remove",
+    "preserveValueImports": false
   }
 }
